<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Encrypted Notes</string>
    <string name="create_new_note">Create new note</string>
    <string name="all_notes">All notes</string>
    <string name="encrypted_note_text">This note is encrypted.\nContent is hidden</string>
    <string name="navigation_menu">Navigation menu</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="notebook_name">Notebook name</string>
    <string name="add_new_notebook">Add new notebook</string>
    <string name="delete_notebook_dialog_title">Delete notebook</string>
    <string name="delete_notebook_dialog_text">Selected notebook will be permanently deleted</string>
    <string name="delete_notebook_dialog_warning">Notes in the notebook will not be deleted or affected.\nThis action can\'t be undone!</string>
    <string name="edit">Edit</string>
    <string name="edit_notebook">Edit notebook</string>
    <string name="back">Back</string>
    <string name="title">Title</string>
    <string name="note_body">Note body</string>
    <string name="created">Created</string>
    <string name="modified">Modified</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="empty_note_discarded">Empty note discarded</string>
    <string name="add">Add</string>
    <string name="image">Image</string>
    <string name="permission_denied">Permission denied</string>
    <string name="remove_image">Remove image</string>
    <string name="note_menu">Note menu</string>
    <string name="delete">Delete</string>
    <string name="delete_note_dialog_title">Delete note</string>
    <string name="delete_note_dialog_text">Your note will be permanently deleted.</string>
    <string name="this_action_cant_be_undone">This action can\'t be undone!</string>
    <string name="encrypt">Encrypt</string>
    <string name="encrypt_dialog_title">Encrypt note</string>
    <string name="encrypt_dialog_text">Each and every note is encrypted with its password.\nPlease, create a strong password and remember it.</string>
    <string name="encrypt_dialog_warning">Warning: you can\'t recover password!\nWith forgotten password you can\'t recover data of this note!</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="password_min_limit">Password should be at least 4 characters long</string>
    <string name="passwords_no_match">Passwords don\'t match</string>
    <string name="cancel">Cancel</string>
    <string name="you_cant_encrypt_empty">You can\'t encrypt empty note</string>
    <string name="decrypt">Decrypt</string>
    <string name="remove_encryption_dialog_title">Remove note encryption</string>
    <string name="remove_encryption_dialog_text">Encryption will be removed from this note.\nAfter this action your note will be plain text</string>
    <string name="this_note_is_encrypted">This note is encrypted</string>
    <string name="open">Open</string>
    <string name="password_is_incorrect">Password is incorrect</string>
    <string name="search_your_notes">Search your notes</string>
    <string name="nothing_was_found">Nothing was found</string>
    <string name="settings_display">Display</string>
    <string name="title_theme">Theme</string>
    <string name="title_theme_dialog">Select theme</string>
    <string name="summary_theme">Change the appearance of App</string>
    <string name="system_theme">System Default</string>
    <string name="light_theme">Light Theme</string>
    <string name="night_theme">Night Theme</string>
    <string name="title_grid_view">Grid view</string>
    <string name="summary_grid_view">Show notes in list as grid</string>
    <string name="settings_backup">Backup and Restore</string>
    <string name="title_backup">Backup</string>
    <string name="summary_backup">Backup your notes and data to storage</string>
    <string name="backup_saved_to">Backup saved to</string>
    <string name="backup_error">Backup was canceled. Something went wrong</string>
    <string name="title_restore">Restore</string>
    <string name="summary_restore">Restore your notes from .db file</string>
    <string name="restore_dialog_text">Notes will be restored from selected .db file.</string>
    <string name="restore_dialog_warning">Existing notes will be replaced (deleted) by backup notes after restoring.\nThis action can\'t be undone!</string>
    <string name="restore_error">Restore was canceled. Something went wrong</string>
    <string name="selected">Selected</string>
    <string name="default_color">Default color</string>
    <string name="light_pink_color">Light Pink color</string>
    <string name="peach_orange_color">Peach Orange color</string>
    <string name="lemon_yellow_color">Lemon Yellow color</string>
    <string name="tea_green_color">Tea Green color</string>
    <string name="sky_blue_color_color">Sky Blue color</string>
    <string name="baby_blue_color">Baby Blue color</string>
    <string name="lavender_purple_color">Lavender Purple Color</string>
    <string name="purple_pink_color">Purple Pink Color</string>
</resources>