<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_remove_encryption_layout"
    android:layout_margin="@dimen/_10sdp"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/dialog_remove_encryption_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dialog_remove_encryption_icon"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/ic_lock_open"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dialog_remove_encryption_indicator" />

    <TextView
        android:id="@+id/dialog_remove_encryption_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/opensans_bold"
        android:includeFontPadding="false"
        android:text="@string/remove_encryption_dialog_title"
        android:gravity="center_vertical"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/dialog_remove_encryption_indicator"
        app:layout_constraintStart_toEndOf="@id/dialog_remove_encryption_icon" />

    <TextView
        android:id="@+id/dialog_remove_encryption_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingBottom="@dimen/_4sdp"
        android:text="@string/remove_encryption_dialog_text"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/dialog_remove_encryption_title" />

    <TextView
        android:id="@+id/dialog_remove_encryption_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/opensans_bold"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/decrypt"
        android:textColor="@color/colorRed"
        android:textAllCaps="true"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/dialog_remove_encryption_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/dialog_remove_encryption_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_13sdp"
        android:fontFamily="@font/opensans_bold"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textAllCaps="true"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_remove_encryption_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_remove_encryption_okay" />


</androidx.constraintlayout.widget.ConstraintLayout>