<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_decrypt_note_layout"
    android:layout_margin="@dimen/_10sdp"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/dialog_decrypt_note_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dialog_decrypt_note_icon"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/ic_pan_tool"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_decrypt_note_indicator" />

    <TextView
        android:id="@+id/dialog_decrypt_note_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/opensans_bold"
        android:includeFontPadding="false"
        android:text="@string/this_note_is_encrypted"
        android:gravity="center_vertical"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/dialog_decrypt_note_indicator"
        app:layout_constraintStart_toEndOf="@id/dialog_decrypt_note_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_decrypt_note_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorIcons"
        app:hintTextColor="@color/colorAccent"
        android:textColorHint="@color/colorTextHint"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/dialog_decrypt_note_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_decrypt_note_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="flagNoPersonalizedLearning|actionNext"
            android:importantForAutofill="no"
            android:fontFamily="@font/opensans_regular"
            android:textSize="@dimen/_12ssp"
            android:textCursorDrawable="@drawable/bg_cursor"
            android:textColor="@color/colorText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dialog_decrypt_note_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/opensans_bold"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/open"
        android:textColor="@color/colorRed"
        android:textAllCaps="true"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/dialog_decrypt_note_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/dialog_decrypt_note_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_13sdp"
        android:fontFamily="@font/opensans_bold"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textAllCaps="true"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_decrypt_note_password_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_decrypt_note_okay" />


</androidx.constraintlayout.widget.ConstraintLayout>